# next-work

./: .gitignore  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  models.py  urls.py
main/migrations/: 0001_initial.py  0002_product_is_active.py  0003_category_alter_product_options_product_date_born_and_more.py
main/templates/main/: index.html
