[tool.poetry]
name = "next-work2"
version = "0.1.0"
description = ""
authors = ["artyom <artemaryj36119@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
